# django-js-vendor

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml
.trae/documents/: Implement Vendor Assets Template Tag.md
django_js_vendor/: apps.py  config.py  core.py  utils.py
django_js_vendor/management/commands/: vendor.py
django_js_vendor/templatetags/: vendor_tags.py
tests/: conftest.py  test_commands.py  test_config.py  test_manager.py  test_manager_advanced.py  test_runner.py  test_templatetags.py
