[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "django-js-vendor"
version = "0.1.0"
description = "A lightweight frontend dependency manager for Django, inspired by cargo and pnpm."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [{ name = "dlivxpr", email = "dlivxpr@hotmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["django", "javascript", "vendor", "package-manager", "static-files"]
dependencies = [
    "django",
    "httpx",
    "tqdm",
    "tomli; python_version < '3.11'",
    "tomlkit>=0.13.3",
]

[project.urls]
Homepage = "https://github.com/dlivxpr/django-js-vendor"
Repository = "https://github.com/dlivxpr/django-js-vendor"
Issues = "https://github.com/dlivxpr/django-js-vendor/issues"
Changelog = "https://github.com/dlivxpr/django-js-vendor/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["django_js_vendor"]

[tool.django-js-vendor]
destination = "static/vendor"
default_provider = "unpkg"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-mock>=3.15.1",
    "respx>=0.22.0",
    "ruff>=0.14.10",
]
